# Fuse_VFS

./: .gitignore  Doxyfile  README.md  meson.build
include/: api.h  defs.h  libtfs.h
libfuse/: block_operations.c  file_operations.c  libtfs.c  meson.build  readwrite.c  utils.c
mkfs/: meson.build  mkfs.c
mount/: attr_operations.c  dir_operations.c  file_operations.c  meson.build  mount.c  mount.h  utils.c
scripts/: run.sh  wc.sh
